# Lox

./: CMakeLists.txt  configure.sh  run.sh
examples/: hello_world.lox
include/: ASTPrinter.hpp  expr.hpp  lox.hpp  parser.hpp  scanner.hpp  token.hpp  tokenType.hpp
src/: ASTPrinter.cpp  lox.cpp  main.cpp  parser.cpp  scanner.cpp  token.cpp
